# Rabbit

./: .gitignore  EXAMPLE.md  LICENSE.txt  NOTES.md  PLAN-security-refactor.md  PLAN.md  PROGRESSREPORT.md  README.md  SPECS.md
demo-warren/: README.md
demo-warren/burrow-0/: config.toml
demo-warren/burrow-0/data/: identity.key
demo-warren/burrow-1/: config.toml
demo-warren/burrow-1/data/: identity.key
demo-warren/burrow-2/: config.toml
demo-warren/burrow-2/data/: identity.key
rabbit-cli/: .gitignore  README.md  pyproject.toml
rabbit-cli/rabbit_client/: __init__.py  __main__.py  browser.py  cli.py  identity.py  menu.py  protocol.py  session.py  transport.py
rabbit_engine/: Cargo.toml
rabbit_engine/src/: burrow.rs  config.rs  lib.rs  session.rs
rabbit_engine/src/ai/: commands.rs  connector.rs  http.rs  mod.rs  types.rs
rabbit_engine/src/content/: handler.rs  loader.rs  mod.rs  search.rs  store.rs
rabbit_engine/src/dispatch/: idem_cache.rs  mod.rs  rate_limiter.rs  router.rs
rabbit_engine/src/events/: continuity.rs  engine.rs  handler.rs  mod.rs
rabbit_engine/src/gui/: app.rs  bridge.rs  dom.rs  events.rs  mod.rs  renderer.rs  state.rs  theme.rs  view_gen.rs
rabbit_engine/src/protocol/: error.rs  frame.rs  lane.rs  lane_manager.rs  mod.rs  txn.rs
rabbit_engine/src/security/: auth.rs  identity.rs  mod.rs  permissions.rs  trust.rs
rabbit_engine/src/transport/: cert.rs  connector.rs  listener.rs  memory.rs  mod.rs  tls.rs  tunnel.rs
rabbit_engine/src/warren/: discovery.rs  mod.rs  peers.rs  routing.rs
rabbit_engine/tests/: cli_tests.rs  dispatch_tests.rs  event_tests.rs  phase_a_tests.rs  phase_b_tests.rs  phase_c_tests.rs  phase_d_tests.rs  phase_e_tests.rs  phase_f_tests.rs  phase_g_tests.rs  phase_h_tests.rs  phase_i_tests.rs  phase_j_tests.rs  protocol_tests.rs  security_tests.rs  transport_tests.rs  warren_tests.rs
rabbitengine_unreviewed_v0.0.1/rabbitengine_unreviewed_v0.0.2/src/: lib.rs
rabbitengine_unreviewed_v0.0.1/rabbitengine_unreviewed_v0.0.2/src/network/: router.rs
rabbitengine_unreviewed_v0.0.1/rabbitengine_unreviewed_v0.0.2/src/protocol/: mod.rs
rabbitengine_unreviewed_v0.0.1/rabbitengine_unreviewed_v0.0.2/src/ui/: mod.rs
rabbitengine_unreviewed_v0.0.1/src/: burrow.rs
rabbitengine_unreviewed_v0.0.1/src/events/: mod.rs
rabbitengine_unreviewed_v0.0.1/src/network/: discovery.rs  mod.rs
rabbitengine_unreviewed_v0.0.1/src/ui/: declaration.rs
rabbitengine_unreviewed_v0.0.2/: Cargo.toml  README.md
rabbitengine_unreviewed_v0.0.2/docs/: test_warren.md
rabbitengine_unreviewed_v0.0.2/src/: burrow.rs  config.rs
rabbitengine_unreviewed_v0.0.2/src/events/: continuity.rs
rabbitengine_unreviewed_v0.0.2/src/network/: acceptor.rs  connector.rs  discovery.rs  federation.rs  tls_util.rs  transport.rs  warren_routing.rs
rabbitengine_unreviewed_v0.0.2/src/protocol/: ack.rs  frame.rs  lane.rs  lane_manager.rs  reliability.rs  txn.rs
rabbitengine_unreviewed_v0.0.2/src/security/: auth.rs  delegation.rs  identity.rs  manifest.rs  mod.rs  permissions.rs  trust.rs
rabbitengine_unreviewed_v0.0.2/src/ui/: declaration.rs  server.rs
