[package]
name = "rabbit_engine"
version = "0.1.0"
edition = "2021"
description = "Rabbit protocol burrow engine — text-based, peer-to-peer, asynchronous."
license = "MIT"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time", "net", "io-util"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
base32 = "0.5"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
