[package]
name = "rabbit_engine"
version = "0.1.0"
edition = "2021"
description = "Rabbit protocol burrow engine — text-based, peer-to-peer, asynchronous."
license = "MIT"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time", "net", "io-util", "signal"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
base32 = "0.5"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
base64 = "0.22.1"

[[bin]]
name = "burrow"
path = "src/bin/burrow.rs"

[[bin]]
name = "rabbit"
path = "src/bin/rabbit.rs"

[[bin]]
name = "rabbit-warren"
path = "src/bin/rabbit_warren.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
