[package]
name = "rabbit_warren_impl"
version = "0.1.0"
edition = "2021"
authors = ["OpenAI Assistant"]
description = "Prototype implementation of the Rabbit protocol warren."
license = "MIT"

# The dependencies below mirror those used in the example
# implementation contained in this repository.  They are
# intentionally declared as optional to avoid forcing a
# successful build when the crate is compiled in the user's
# environment.  Should you wish to compile the crate you
# may need to update these versions to match your local
# toolchain.

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = { version = "1", optional = true }
base64 = { version = "0.21", optional = true }
ed25519-dalek = { version = "1", features = ["std"], optional = true }
rand = { version = "0.8", optional = true }
rcgen = { version = "0.9", optional = true }
x509-parser = { version = "0.13", optional = true }
sha2 = { version = "0.10", optional = true }
warp = { version = "0.3", features = ["tls"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
toml = { version = "0.8", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
serde_derive = { version = "1", optional = true }
anyhow = { version = "1", optional = true }
tokio-rustls = { version = "0.24", optional = true }
rustls = { version = "0.21", default-features = false, features = ["std"], optional = true }
rustls-pemfile = { version = "1", optional = true }

# Feature groups to allow selective compilation of subcomponents.  If
# you want to experiment with specific layers of the protocol
# enable the corresponding feature in your Cargo invocation.

[features]
default = [
    "core",
    "security",
    "network",
    "config",
    "ui",
]
core = ["tokio", "serde", "serde_json", "thiserror"]
security = ["core", "ed25519-dalek", "rand", "sha2", "base64"]
network = [
    "core",
    "security",
    "rcgen",
    "x509-parser",
    "warp",
    "anyhow",
    "tokio-rustls",
    "rustls",
    "rustls-pemfile",
]
config = ["serde", "toml", "serde_derive"]
ui = ["warp"]
